gitops-manifests/apps/bankguard/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankguard-api
  labels:
    app.kubernetes.io/name: bankguard-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: bankguard-system
    app.kubernetes.io/managed-by: gitops
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: bankguard-api
      app.kubernetes.io/component: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bankguard-api
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: bankguard-system
        app.kubernetes.io/managed-by: gitops
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "5000"
    spec:
      serviceAccountName: bankguard-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - bankguard-api
      containers:
      - name: bankguard-api
        image: ghcr.io/laurentmd5/bankguard-api:__IMAGE_TAG__
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
          name: http
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        volumeMounts:
        - name: logs
          mountPath: /app/logs
      volumes:
      - name: logs
        emptyDir: {}
      tolerations:
      - key: dedicated
        operator: Equal
        value: bankguard
        effect: NoSchedule
